# babblebot

./: .gitignore  Cargo.toml  Config.toml.example  README.rst  Rocket.toml.example  Settings.toml.example  cli.yml
assets/: master.css  master.styl
assets/css/: master.css  master.styl
docs/: conf.py  control.rst  index.rst  installation.rst  local.rst
docs/commands/: clip.rst  command.rst  commercials.rst  counters.rst  echo.rst  game.rst  index.rst  moderation.rst  multi.rst  notices.rst  permit.rst  phrases.rst  set.rst  songreq.rst  title.rst  unset.rst
docs/settings/: channel.rst  command.rst  discord.rst  fortnite.rst  index.rst  pubg.rst  stats.rst  viewerstats.rst  watchtime.rst
docs/variables/: args.rst  channel.rst  cmd.rst  countdown.rst  counter.rst  counterinc.rst  date.rst  dateinc.rst  followage.rst  followcount.rst  fortnite-kills.rst  fortnite-wins.rst  fortnite.rst  index.rst  phrase.rst  pubg-damage.rst  pubg-headshots.rst  pubg-kills.rst  pubg-roadkills.rst  pubg-teamkills.rst  pubg-vehicles-destroyed.rst  pubg-wins.rst  pubg.rst  spotify-playing-album.rst  spotify-playing-artist.rst  spotify-playing-title.rst  spotify.rst  subcount.rst  time.rst  uptime.rst  urlfetch.rst  user.rst  watchrank.rst  watchtime.rst  youtube-latest-title.rst  youtube-latest-url.rst  youtube.rst
scripts/: build.sh
src/: agent.rs  commands.rs  local.rs  main.rs  types.rs  util.rs  web.rs
templates/: commands.html.tera  dashboard.html.tera  index.html.tera  name.html.hbs
templates/common/: base.html.tera
