[package]
name = "babblebot"
version = "0.1.0"
authors = ["toovs <toovs@tutamail.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.4"
config = "0.9"
clap = { version = "2.33", features = ["yaml"] }
redis = "0.10"
url = "1.7"
irc = "0.13"
reqwest = "=0.9.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8"
rocket = { features = ["tls"], git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { features = ["json", "tera_templates", "redis_pool"], git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
r2d2_redis = "0.8"
jsonwebtoken = "6.0"
regex = "1.1"
chrono = "0.4"
crossbeam-channel = "0.3"
humantime = "1.2"
serenity = "0.6"
flexi_logger = "0.11"
log = "0.4"
