[package]
name = "babblebot"
version = "1.0.0"
authors = ["toovs <toovs@tutamail.com>"]
edition = "2018"

[dependencies]
either = "1.5"
bcrypt = "0.5"
rand = "0.7"
base64 = "0.10"
config = "0.9"
clap = { version = "2.33", features = ["yaml"] }
redis = "0.10"
url = "2.0"
irc = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8"
http = "0.1"
reqwest = "0.9"
rocket = { features = ["tls"], git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { features = ["json", "tera_templates", "redis_pool"], git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
r2d2_redis = "0.8"
jsonwebtoken = "6.0"
regex = "1.2"
chrono = "0.4"
crossbeam-channel = "0.3"
humantime = "1.2"
serenity = "0.6"
flexi_logger = "0.14"
log = "0.4"
tokio = "0.1"
tokio-core = "0.1"
futures = "0.1"
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "agent"
path = "src/agent.rs"
